2003-08-09  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-coding.el (coded-charset-entity-reference-alist): Add
	setting for `chinese-big5'.

2003-08-05  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-coding.el (coded-charset-entity-reference-alist):
	Prefer `chinese-big5-cdp' to `ideograph-daikanwa' and
	`ideograph-gt-k'; prefer `ideograph-daikanwa' to `ideograph-gt-k';
	add setting for HZK0[12]-xxxx.

2003-08-04  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=iso-ir165): Define to inherit from `=gb2312'
	in XEmacs CHISE.

2003-07-28  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list):
	Prefer `=big5-cdp', `chinese-big5-eten-a', `chinese-big5-eten-b'
	and `chinese-big5' to `=gt-pj-*'.

2003-05-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=daikanwa): Renamed from
	`ideograph-daikanwa'.
	(ideograph-daikanwa): Changed to an alias for `=daikanwa'.

2003-05-09  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (=cns11643-7): Renamed from
	`chinese-cns11643-7'.
	(chinese-cns11643-7): Changed to an alias for `=cns11643-7'.

2003-05-07  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (=cns11643-6): Renamed from
	`chinese-cns11643-6'.
	(chinese-cns11643-6): Changed to an alias for `=cns11643-6'.

2003-05-06  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=cns11643-5): Renamed from
	`chinese-cns11643-5'.
	(chinese-cns11643-5): Changed to an alias for `=cns11643-5'.

2003-05-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=cns11643-4): Renamed from
	`chinese-cns11643-4'.
	(chinese-cns11643-4): Changed to an alias for `=cns11643-4'.

2003-05-02  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (=cns11643-3): Renamed from
	`chinese-cns11643-3'.